force-app/main/default/objects/QA_Master__c/QA_Master__c.object-meta.xml
<CustomObject>
    <description>menyimpan informasi mengenai aspek penilaian</description>
    <label>QA Master</label>
    <nameField>
        <label>QA Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>