force-app/main/default/objects/QA_Master__c/fields/Bobot__c.field-meta.xml
<CustomField>
    <fullName>Bobot__c</fullName>
    <label>Bobot (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>