force-app/main/default/objects/QA_Master__c/fields/Non_Critical_Error__c.field-meta.xml
<CustomField>
    <fullName>Non_Critical_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Critical Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>