force-app/main/default/objects/QA_Master__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>QA_Master_Detail__c</referenceTo>
    <relationshipLabel>QA Master</relationshipLabel>
    <relationshipName>QA_Master</relationshipName>
    <type>Lookup</type>
</CustomField>