force-app/main/default/objects/QA_Master__c/fields/Section_Penilaian__c.field-meta.xml
<CustomField>
    <fullName>Section_Penilaian__c</fullName>
    <label>Section Penilaian [NO USE]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Experience ( empati )</fullName>
            </value>
            <value>
                <fullName>Customer Affecting Critical Error</fullName>
            </value>
            <value>
                <fullName>Problem Solution</fullName>
            </value>
            <value>
                <fullName>Business Affecting Critical Error</fullName>
            </value>
            <value>
                <fullName>Compliance Affecting Critical Error</fullName>
            </value>
            <value>
                <fullName>Non Critical Error</fullName>
            </value>
            <value>
                <fullName>Ejaan</fullName>
            </value>
            <value>
                <fullName>Kalimat tepat</fullName>
            </value>
            <value>
                <fullName>Opening</fullName>
            </value>
            <value>
                <fullName>Presentasi &amp;  Communication Skill</fullName>
            </value>
            <value>
                <fullName>Compliance Affecting</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Hard Skill</fullName>
            </value>
            <value>
                <fullName>Sikap Melayani</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>