force-app/main/default/objects/QA_Master__c/fields/Sub_Voice__c.field-meta.xml
<CustomField>
    <fullName>Sub_Voice__c</fullName>
    <label>Sub - Voice</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRS</fullName>
            </value>
            <value>
                <fullName>CDS</fullName>
            </value>
            <value>
                <fullName>BMS</fullName>
            </value>
            <value>
                <fullName>WBS</fullName>
            </value>
            <value>
                <fullName>PBS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>