force-app/main/default/objects/QA_Master__c/recordTypes/AL_Agent_Leader.recordType-meta.xml
<RecordType>
    <fullName>AL_Agent_Leader</fullName>
    <active>true</active>
    <label>AGENT LEADER</label>
</RecordType>