force-app/main/default/objects/QA_Master__c/recordTypes/BMS.recordType-meta.xml
<RecordType>
    <fullName>BMS</fullName>
    <active>false</active>
    <label>BMS</label>
</RecordType>