force-app/main/default/objects/QA_Master__c/recordTypes/CDS.recordType-meta.xml
<RecordType>
    <fullName>CDS</fullName>
    <active>false</active>
    <label>CDS</label>
</RecordType>