force-app/main/default/objects/QA_Master__c/recordTypes/MRS.recordType-meta.xml
<RecordType>
    <fullName>MRS</fullName>
    <active>false</active>
    <label>MRS</label>
</RecordType>