force-app/main/default/objects/QA_Master__c/recordTypes/Non_Voice.recordType-meta.xml
<RecordType>
    <fullName>Non_Voice</fullName>
    <active>true</active>
    <label>NON VOICE (SMS, EMAIL, LAYANAN PEDULI E-CHANNEL)</label>
</RecordType>