force-app/main/default/objects/QA_Master__c/recordTypes/PBS.recordType-meta.xml
<RecordType>
    <fullName>PBS</fullName>
    <active>false</active>
    <label>PBS</label>
</RecordType>