force-app/main/default/objects/QA_Master__c/recordTypes/RPS.recordType-meta.xml
<RecordType>
    <fullName>RPS</fullName>
    <active>false</active>
    <label>RPS</label>
</RecordType>