force-app/main/default/objects/QA_Master__c/recordTypes/RPS_BRING_LOP.recordType-meta.xml
<RecordType>
    <fullName>RPS_BRING_LOP</fullName>
    <active>true</active>
    <label>RPS (BRING &amp; LOP)</label>
</RecordType>