force-app/main/default/objects/QA_Master__c/recordTypes/RPS_Non_BRING_LOP.recordType-meta.xml
<RecordType>
    <fullName>RPS_Non_BRING_LOP</fullName>
    <active>true</active>
    <label>RPS (AKTIVASI, BRIGUNA, BRIMO)</label>
</RecordType>