force-app/main/default/objects/QA_Master__c/recordTypes/URS_Urgent_Call_Recovery_Service.recordType-meta.xml
<RecordType>
    <fullName>URS_Urgent_Call_Recovery_Service</fullName>
    <active>true</active>
    <label>URS (URGENT CALL RECOVERY SERVICES)</label>
</RecordType>