force-app/main/default/objects/QA_Master__c/recordTypes/VBS.recordType-meta.xml
<RecordType>
    <fullName>VBS</fullName>
    <active>true</active>
    <label>VBS (VIDEO BANKING SERVICE)</label>
</RecordType>