force-app/main/default/objects/QA_Master__c/recordTypes/Voice.recordType-meta.xml
<RecordType>
    <fullName>Voice</fullName>
    <active>true</active>
    <label>VOICE</label>
</RecordType>