force-app/main/default/objects/QA_Master__c/recordTypes/WBS.recordType-meta.xml
<RecordType>
    <fullName>WBS</fullName>
    <active>false</active>
    <label>WBS</label>
</RecordType>