force-app/main/default/objects/QA_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bobot__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Section__c</columns>
    <columns>Section_Penilaian__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>