force-app/main/default/objects/QA_Master__c/listViews/Master_RPS_Non_BRING_LOP.listView-meta.xml
<ListView>
    <fullName>Master_RPS_Non_BRING_LOP</fullName>
    <columns>NAME</columns>
    <columns>Bobot__c</columns>
    <columns>Section__c</columns>
    <columns>Section_Penilaian__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA_Master__c.RPS_Non_BRING_LOP</value>
    </filters>
    <label>Master - RPS Non (BRING &amp; LOP)</label>
</ListView>