force-app/main/default/objects/QA_Master__c/listViews/Master_VBS.listView-meta.xml
<ListView>
    <fullName>Master_VBS</fullName>
    <columns>NAME</columns>
    <columns>Bobot__c</columns>
    <columns>Section__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>QA_Master__c.VBS</value>
    </filters>
    <label>Master - VBS</label>
</ListView>